Revert "Task 1 addition"
This reverts commit 5aef7c835b2a8a10c934874e7dfd85b64a5cef84.

--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
         <h1>United we excel</h1>
         <div class="container-left">
           <div class="left-menu">
-            <div class="left-menu-item"><h3>Kentico</h3><button class="btn-plus">+</button></div>
-            <div class="left-menu-item"><h3>Sitecore</h3><button class="btn-plus">+</button></div>
-            <div class="left-menu-item "><h3>Tridion</h3><button class="btn-plus">-</button></div>
-            <ul class="nav-list-left selected">
+            <h3 class="left-menu-item">Kentico</h3>
+            <h3 class="left-menu-item">Sitecore</h3>
+            <h3 class="left-menu-item">Tridion</h3>
+            <ul class="nav-list-left">
               <li> <a href="">RWS Tridion</a></li>
               <li><a href="">RWS Tridion Docs</a></li>
               <li><a href="">RWS Language Cloud</a></li>
               <li><a href="">RWS Trados Studio</a></li>
            </ul>
-           <div class="left-menu-item"><h3>ADAM</h3><button class="btn-plus">+</button></div>
+           <h3 class="left-menu-item">ADAM</h3>
           </div>
         </div>
 
@@ -85,33 +85,33 @@ destinations worldwide. A member of the Star Alliance, Turkish was named by Skyt
     <footer class="footer">
     <div class="footer-links">
       <ul class="nav-list-footer">
-        <li class="footer-title">WHAT WE OFFER</li>
+        <li>WHAT WE OFFER</li>
         <li>RWS Tridion</li>
         <li>Custom Development</li>
         <li>Kentico</li>
         <li>Sitecore</li>
       </ul>
       <ul class="nav-list-footer">
-        <li class="footer-title">ABOUT US</li>
+        <li>ABOUT US</li>
         <li>Company</li>
         <li>Leadership</li>
         <li>Partners</li>
       </ul>
       <ul class="nav-list-footer">
-        <li class="footer-title">CAREERS</li>
+        <li>CAREERS</li>
         <li>Why work at EXLRT</li>
         <li>Job openings</li>
         <li>Application procedure</li>
         <li> Terms of employment</li>
       </ul>
       <ul class="nav-list-footer">
-        <li class="footer-title">CONTACT</li>
-        <li>Location</li>
-        <li>Contact us</li>
-        <li>Ask a question</li>
+        <li>CONTACT</li>
+      <li>Location</li>
+      <li>Contact us</li>
+      <li>Ask a question</li>
       </ul>
     </div>
-     <p class="rights"> 2022 EXLRT. All rights Reserved.</p>
+     <p class="rights"> 2022 EXLRT. All rights reserved.</p>
     </footer>
 </body>
 </html>
