Removed horizontal scroll, finished left menu...

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
           <div class="left-menu">
             <div class="left-menu-item"><h3>Kentico</h3><button class="btn-plus">+</button></div>
             <div class="left-menu-item"><h3>Sitecore</h3><button class="btn-plus">+</button></div>
-            <div class="left-menu-item "><h3>Tridion</h3><button class="btn-plus">-</button></div>
-            <ul class="nav-list-left selected">
+            <div class="left-menu-item selected"><h3>Tridion</h3><button class="btn-plus selected">-</button></div>
+            <ul class="nav-list-left">
               <li> <a href="">RWS Tridion</a></li>
               <li><a href="">RWS Tridion Docs</a></li>
               <li><a href="">RWS Language Cloud</a></li>
