Fix href, adding section aside, fix css, removing flex, removing width from certain places

--- a/task1/index.html
+++ b/task1/index.html
@@ -1,52 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>EXLRT</title>
-  <link rel="stylesheet" href="style/styles.css">
-</head>
-<body>
-  <header>
-    <nav class="navigation-bar">
-      <div class="logo"><img src="assets/logo.png" alt="EXLRT Logo"></div>
-      <div class="navigation-bar nav-links">
-          <ul class="nav-list">
-            <li class="nav-item"><a href="#">Platform and Services</a></li>
-            <li class="nav-item"><a href="#">About Us</a></li>
-            <li class="nav-item"><a href="#">Careers</a></li>
-            <li class="nav-item"><a href="#">Clients</a></li>
-            <li class="nav-item"><a href="#">Blog</a></li>
-            <li class="nav-item"><a href="#">Contact</a></li>
-          </ul>
-        </div>
-        <div>
-          <form class="search">
-              <input type="text" class="search-input" placeholder="Search">
-              <button class="search-img" type="submit"></button>
-          </form>
-        </div>
-    </nav>
-  </header>
-  <div class="page-layout">
-    <div class="side-menu">
-      <div class="left-menu">
-        <div class="left-menu-item">Kentico<button class="btn-plus">+</button></div>
-        <div class="left-menu-item">Sitecore<button class="btn-plus">+</button></div>
-        <div class="left-menu-item selected">Tridion<button class="btn-plus selected">-</button></div>
-        <ul class="nav-list-left">
-          <li><a href="">RWS Tridion</a></li>
-          <li><a href="">RWS Tridion Docs</a></li>
-          <li><a href="">RWS Language Cloud</a></li>
-          <li><a href="">RWS Trados Studio</a></li>
-        </ul>
-        <div class="left-menu-item">ADAM<button class="btn-plus">+</button></div>
-      </div>
-    </div>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>EXLRT</title>
+    <link rel="stylesheet" href="style/styles.css">
+  </head>
+  <body>
+    <header>
+      <nav class="navigation-bar">
+        <div class="logo"><img src="assets/logo.png" alt="EXLRT Logo"></div>
+        <div class="navigation-bar nav-links">
+            <ul class="nav-list">
+              <li class="nav-item"><a href="#">Platform and Services</a></li>
+              <li class="nav-item"><a href="#">About Us</a></li>
+              <li class="nav-item"><a href="#">Careers</a></li>
+              <li class="nav-item"><a href="#">Clients</a></li>
+              <li class="nav-item"><a href="#">Blog</a></li>
+              <li class="nav-item"><a href="#">Contact</a></li>
+            </ul>
+          </div>
+          <div>
+            <form class="search">
+                <input type="text" class="search-input" placeholder="Search">
+                <button class="search-img" type="submit"></button>
+            </form>
+          </div>
+      </nav>
+    </header>
     <main>
-      <div class="content">
+      <h1>United we excel</h1>
+      <aside class="side-menu">
+        <div class="left-menu">
+          <div class="left-menu-item">Kentico<button class="btn-plus">+</button></div>
+          <div class="left-menu-item">Sitecore<button class="btn-plus">+</button></div>
+          <div class="left-menu-item selected">Tridion<button class="btn-plus selected">-</button></div>
+          <ul class="nav-list-left">
+            <li><a href="#">RWS Tridion</a></li>
+            <li><a href="#">RWS Tridion Docs</a></li>
+            <li><a href="#">RWS Language Cloud</a></li>
+            <li><a href="#">RWS Trados Studio</a></li>
+          </ul>
+          <div class="left-menu-item">ADAM<button class="btn-plus">+</button></div>
+        </div>
+      </aside>
+      <section class="content">
         <div class="articles"> 
-          <h1>United we excel</h1>
           <div class="row">
             <article class="article part-2">
               <h2>Disneyland Paris</h2>
@@ -83,38 +82,38 @@
             </article>
           </div>
         </div>
-      </main>
-    </div>
+      </section>
+    </main>
     <footer class="footer">
       <div class="footer-links">
         <ul class="nav-list-footer">
           <li class="footer-title">WHAT WE OFFER</li>
-          <li class="footer-link"><a href="">RWS Tridion</a></li>
-          <li><a href="">Custom Development</a></li>
-          <li><a href="">Kentico</a></li>
-          <li><a href="">Sitecore</a></li>
+          <li><a href="#">RWS Tridion</a></li>
+          <li><a href="#">Custom Development</a></li>
+          <li><a href="#">Kentico</a></li>
+          <li><a href="#">Sitecore</a></li>
         </ul>
         <ul class="nav-list-footer">
           <li class="footer-title">ABOUT US</li>
-          <li><a href="">Company</a></li>
-          <li><a href="">Leadership</a></li>
-          <li><a href="">Partners</a></li>
+          <li><a href="#">Company</a></li>
+          <li><a href="#">Leadership</a></li>
+          <li><a href="#">Partners</a></li>
         </ul>
         <ul class="nav-list-footer">
           <li class="footer-title">CAREERS</li>
-          <li><a href="">Why work at EXLRT</a></li>
-          <li><a href="">Job openings</a></li>
-          <li><a href="">Application procedure</a></li>
-          <li><a href="">Terms of employment</a></li>
+          <li><a href="#">Why work at EXLRT</a></li>
+          <li><a href="#">Job openings</a></li>
+          <li><a href="#">Application procedure</a></li>
+          <li><a href="#">Terms of employment</a></li>
         </ul>
         <ul class="nav-list-footer">
           <li class="footer-title">CONTACT</li>
-          <li><a href="">Location</a></li>
-          <li><a href="">Contact us</a></li>
-          <li><a href="">Ask a question</a></a></li>
+          <li><a href="#">Location</a></li>
+          <li><a href="#">Contact us</a></li>
+          <li><a href="#">Ask a question</a></a></li>
         </ul>
       </div>
       <p class="rights"> 2022 EXLRT. All rights Reserved.</p>
     </footer>
-</body>
+  </body>
 </html>
