--- a/task2/index.html
+++ b/task2/index.html
@@ -50,7 +50,7 @@
       <section class="content">
         <div class="content__articles"> 
           <div class="content__row">
-            <article class="article article--part-2">
+            <article class="article article--part-2 article--right">
               <h2>Disneyland Paris</h2>
               <div><img src="assets/disneyland/image-disney.jpg" class="article__img--right" alt="Disneyland Paris"></div>
               <h3>Case Study</h3>
@@ -58,7 +58,7 @@
   Euro Disney Resort, is an entertainment resort in Paris, and it is the most visited theme park in the whole France and Europe.</p>
                 <a href="https://www.disneylandparis.com/en-gb/" class="article__read-more">Read more</a>
             </article>
-            <article class="article article--part-2">
+            <article class="article article--part-2 article--left">
               <h2>Turkish Airlines</h2>
               <div><img src="assets/turkish/image-turkish.jpg" class="article__img--right" alt="Turkish Airlines"></div>
               <h3>Case Study</h3>
@@ -73,7 +73,12 @@
               <div><img src="assets/aci/image-aci.jpg" class="article__img--wide" alt="ACI Universal Payments"></div>
               <p>ACI Worldwide — the leader in real-time payments — delivers the mission-critical real-time payments software solutions that enable corporations to process and manage digital payments, power omni-commerce payments, present and process bill payments, and manage fraud and risk. </p>
             </article>
-            <article class="article article--part-3">
+            <article class="article article--part-3 article--mobile">
+              <h2 class="article__title">AEG</h2>
+              <p>AEG Presents is one of the largest live music companies in the world. The company is dedicated to all aspects of live contemporary music performances, including producing and promoting global and regional concert tours, music events and world-renowned festivals.  </p>
+              <div><img src="assets/aeg/image-aeg.jpg" class="article__img--wide" alt="ACI Universal Payments"></div>
+            </article>
+            <article class="article article--part-3 article--desktop">
               <h2 class="article__title">AEG</h2>
               <div><img src="assets/aeg/image-aeg.jpg" class="article__img--wide" alt="ACI Universal Payments"></div>
               <p>AEG Presents is one of the largest live music companies in the world. The company is dedicated to all aspects of live contemporary music performances, including producing and promoting global and regional concert tours, music events and world-renowned festivals.  </p>
@@ -89,27 +94,27 @@
     </main>
     <footer>
       <div class="footer">
-        <ul class="footer__nav-list">
+        <ul class="footer__nav-list footer__nav-list--mobile">
           <li class="footer__nav-list--title">WHAT WE OFFER</li>
           <li><a href="#">RWS Tridion</a></li>
           <li><a href="#">Custom Development</a></li>
           <li><a href="#">Kentico</a></li>
           <li><a href="#">Sitecore</a></li>
         </ul>
-        <ul class="footer__nav-list">
+        <ul class="footer__nav-list footer__nav-list--mobile">
           <li class="footer__nav-list--title">ABOUT US</li>
           <li><a href="#">Company</a></li>
           <li><a href="#">Leadership</a></li>
           <li><a href="#">Partners</a></li>
         </ul>
-        <ul class="footer__nav-list">
+        <ul class="footer__nav-list footer__nav-list--desktop-only">
           <li class="footer__nav-list--title">CAREERS</li>
           <li><a href="#">Why work at EXLRT</a></li>
           <li><a href="#">Job openings</a></li>
           <li><a href="#">Application procedure</a></li>
           <li><a href="#">Terms of employment</a></li>
         </ul>
-        <ul class="footer__nav-list">
+        <ul class="footer__nav-list footer__nav-list--desktop-only">
           <li class="footer__nav-list--title">CONTACT</li>
           <li><a href="#">Location</a></li>
           <li><a href="#">Contact us</a></li>
