--- a/task2/index.html
+++ b/task2/index.html
@@ -50,20 +50,28 @@
       <section class="content">
         <div class="content__articles"> 
           <div class="content__row">
-            <article class="article article--part-2 article--right">
+            <article class="article article--part-2">
               <h2>Disneyland Paris</h2>
-              <div><img src="assets/disneyland/image-disney.jpg" class="article__img--right" alt="Disneyland Paris"></div>
-              <h3>Case Study</h3>
-              <p>The Disneyland Paris, originally The 
-  Euro Disney Resort, is an entertainment resort in Paris, and it is the most visited theme park in the whole France and Europe.</p>
-                <a href="https://www.disneylandparis.com/en-gb/" class="article__read-more">Read more</a>
+              <div class="article__row">
+                <div><img src="assets/disneyland/image-disney.jpg" class="article__img--right" alt="Disneyland Paris"></div>
+                <div class="article__body">
+                  <h3>Case Study</h3>
+                  <p>The Disneyland Paris, originally The 
+      Euro Disney Resort, is an entertainment resort in Paris, and it is the most visited theme park in the whole France and Europe.</p>
+                </div>
+              </div>
+              <a href="https://www.disneylandparis.com/en-gb/" class="article__read-more">Read more</a>
             </article>
             <article class="article article--part-2 article--left">
               <h2>Turkish Airlines</h2>
-              <div><img src="assets/turkish/image-turkish.jpg" class="article__img--right" alt="Turkish Airlines"></div>
-              <h3>Case Study</h3>
-              <p>Turkish Airlines is the national airline of Turkey and flies to more than 200
-  destinations worldwide. A member of the Star Alliance, Turkish was named by Skytrax as “Best Airline Europe” in 2011 and 2012, and has also won the “Best Premium Economy Seats” for its Comfort Class seats.</p>
+              <div class="article__row">
+                <div><img src="assets/turkish/image-turkish.jpg" class="article__img--right" alt="Turkish Airlines"></div>
+                <div class="article__body">
+                  <h3>Case Study</h3>
+                  <p>Turkish Airlines is the national airline of Turkey and flies to more than 200
+      destinations worldwide. A member of the Star Alliance, Turkish was named by Skytrax as “Best Airline Europe” in 2011 and 2012, and has also won the “Best Premium Economy Seats” for its Comfort Class seats.</p>
+                </div>
+              </div>
               <a href="https://www.disneylandparis.com/en-gb/" class="article__read-more">Read more</a>
             </article>
           </div>
@@ -73,15 +81,10 @@
               <div><img src="assets/aci/image-aci.jpg" class="article__img--wide" alt="ACI Universal Payments"></div>
               <p>ACI Worldwide — the leader in real-time payments — delivers the mission-critical real-time payments software solutions that enable corporations to process and manage digital payments, power omni-commerce payments, present and process bill payments, and manage fraud and risk. </p>
             </article>
-            <article class="article article--part-3 article--mobile">
+            <article class="article article--part-3 article--text">
               <h2 class="article__title">AEG</h2>
-              <p>AEG Presents is one of the largest live music companies in the world. The company is dedicated to all aspects of live contemporary music performances, including producing and promoting global and regional concert tours, music events and world-renowned festivals.  </p>
-              <div><img src="assets/aeg/image-aeg.jpg" class="article__img--wide" alt="ACI Universal Payments"></div>
-            </article>
-            <article class="article article--part-3 article--desktop">
-              <h2 class="article__title">AEG</h2>
-              <div><img src="assets/aeg/image-aeg.jpg" class="article__img--wide" alt="ACI Universal Payments"></div>
-              <p>AEG Presents is one of the largest live music companies in the world. The company is dedicated to all aspects of live contemporary music performances, including producing and promoting global and regional concert tours, music events and world-renowned festivals.  </p>
+              <div><img src="assets/aeg/image-aeg.jpg" class="article__img--stacked" alt="ACI Universal Payments"></div>
+              <p class="article__text">AEG Presents is one of the largest live music companies in the world. The company is dedicated to all aspects of live contemporary music performances, including producing and promoting global and regional concert tours, music events and world-renowned festivals.  </p>
             </article>
             <article class="article article--part-3" >
               <h2 class="article__title">IVC Evidensia</h2>
