Mixin for media query in new file, remove overflow, some other adjustment...

--- a/task2/index.html
+++ b/task2/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <nav class="nav">
+      <nav>
         <button class="nav__burger"><img src="assets/icon-burger.png" alt="EXLRT Burger"></button>
         <div class="nav__logo"><img src="assets/logo.png" alt="EXLRT Logo"></div>
         <div class="nav">
@@ -36,8 +36,8 @@
           <ul>
             <li class="left-menu__item">Kentico<button class="left-menu__btn">+</button></li>
             <li class="left-menu__item">Sitecore<button class="left-menu__btn">+</button></li>
-            <li class="left-menu__item item--selected">Tridion<button class="left-menu__btn item--selected">-</button></li>
-              <ul class="left-menu__item--selected">
+            <li class="left-menu__item item--opened">Tridion<button class="left-menu__btn item--opened">-</button></li>
+              <ul class="left-menu__item--opened">
                 <li><a href="#">RWS Tridion</a></li>
                 <li><a href="#">RWS Tridion Docs</a></li>
                 <li><a href="#">RWS Language Cloud</a></li>
