--- a/task2/index.html
+++ b/task2/index.html
@@ -53,7 +53,7 @@
             <article class="article article--part-2">
               <h2>Disneyland Paris</h2>
               <div class="article__row">
-                <div><img src="assets/disneyland/image-disney.jpg" class="article__img--right" alt="Disneyland Paris"></div>
+                <div class="article__img--right"><img src="assets/disneyland/image-disney.jpg" alt="Disneyland Paris"></div>
                 <div class="article__body">
                   <h3>Case Study</h3>
                   <p>The Disneyland Paris, originally The 
@@ -65,7 +65,7 @@
             <article class="article article--part-2 article--left">
               <h2>Turkish Airlines</h2>
               <div class="article__row">
-                <div><img src="assets/turkish/image-turkish.jpg" class="article__img--right" alt="Turkish Airlines"></div>
+                <div class="article__img--right"><img src="assets/turkish/image-turkish.jpg" alt="Turkish Airlines"></div>
                 <div class="article__body">
                   <h3>Case Study</h3>
                   <p>Turkish Airlines is the national airline of Turkey and flies to more than 200
@@ -78,17 +78,17 @@
           <div class="content__row">
             <article class="article article--part-3">
               <h2 class="article__title">ACI Universal Payments</h2>
-              <div><img src="assets/aci/image-aci.jpg" class="article__img--wide" alt="ACI Universal Payments"></div>
+              <div class="article__img--wide"><img src="assets/aci/image-aci.jpg" alt="ACI Universal Payments"></div>
               <p>ACI Worldwide — the leader in real-time payments — delivers the mission-critical real-time payments software solutions that enable corporations to process and manage digital payments, power omni-commerce payments, present and process bill payments, and manage fraud and risk. </p>
             </article>
             <article class="article article--part-3 article--text">
               <h2 class="article__title">AEG</h2>
-              <div><img src="assets/aeg/image-aeg.jpg" class="article__img--stacked" alt="ACI Universal Payments"></div>
+              <div class="article__img--stacked"><img src="assets/aeg/image-aeg.jpg" alt="ACI Universal Payments"></div>
               <p class="article__text">AEG Presents is one of the largest live music companies in the world. The company is dedicated to all aspects of live contemporary music performances, including producing and promoting global and regional concert tours, music events and world-renowned festivals.  </p>
             </article>
             <article class="article article--part-3" >
               <h2 class="article__title">IVC Evidensia</h2>
-              <div><img src="assets/evidensia/image-evidensia.jpg" class="article__img--wide" alt="ACI Universal Payments"></div>
+              <div class="article__img--wide"><img src="assets/evidensia/image-evidensia.jpg" alt="ACI Universal Payments"></div>
               <p>IVC Evidensia is the leading global veterinary care provider comprising an expansive network of clinics, hospitals and out-of-hour centres based across 19 countries. We invest in our people, premises and processes to provide clinical excellence.   </p>
             </article>
           </div>
