--- a/task3/index.html
+++ b/task3/index.html
@@ -74,13 +74,11 @@
             <article class="article article--left my-2  h-100 d-flex flex-column">
               <h2 class="ms-md-5 ms-sm-0">Turkish Airlines</h2>
               <div class="article__row">
-                <div class="article__img--right pe-4"><img src="assets/turkish/image-turkish.jpg" alt="Turkish Airlines"></div>
-                <div class="article__body">
+                <div class="article__img--left pe-4"><img src="assets/turkish/image-turkish.jpg" alt="Turkish Airlines"></div>
                   <h3 class="fs-5">Case Study</h3>
-                  <p>Turkish Airlines is the national airline of Turkey and flies to more than 200
+                  <p class="fs-6">Turkish Airlines is the national airline of Turkey and flies to more than 200
       destinations worldwide. A member of the Star Alliance, Turkish was named by Skytrax as “Best Airline Europe” in 2011 and 2012, and has also won the “Best Premium Economy Seats” for its Comfort Class seats.</p>
                 </div>
-              </div>
               <a href="https://www.disneylandparis.com/en-gb/" class="article__read-more mt-auto">Read more</a>
             </article>
           </div>
