--- a/task3/index.html
+++ b/task3/index.html
@@ -41,16 +41,16 @@
       <aside class="col-md-3 d-none d-md-block">
         <nav class="border-0 p-3 m-5 side-nav">
           <ul class="nav flex-column ">
-            <li class="nav-item rounded text-white m-2 side-item">Kentico<button class="btn left-menu__btn">+</button></li>
-            <li class="nav-item rounded text-white m-2 side-item">Sitecore<button class="btn left-menu__btn">+</button></li>
-            <li class="nav-item rounded text-white m-2 side-item--opened">Tridion<button class="btn left-menu__btn item--opened">-</button></li>
-              <ul class="list-group text-start">
-                <li class="list-group-item border-0"><a href="#">RWS Tridion</a></li>
-                <li class="list-group-item border-0"><a href="#">RWS Tridion Docs</a></li>
-                <li class="list-group-item border-0"><a href="#">RWS Language Cloud</a></li>
-                <li class="list-group-item border-0 "><a href="#">RWS Trados Studio</a></li>
+            <li class="nav-item rounded text-white m-2 ps-2 pt-2 side-item">Kentico<button class="btn left-menu__btn">+</button></li>
+            <li class="nav-item rounded text-white m-2 ps-2 pt-2 side-item">Sitecore<button class="btn left-menu__btn">+</button></li>
+            <li class="nav-item rounded text-white m-2 ps-2 pt-2 side-item--opened">Tridion<button class="btn left-menu__btn item--opened">-</button></li>
+              <ul class="list-group p-1 text-start">
+                <li class="list-group-item p-0 ps-2 border-0"><a href="#">RWS Tridion</a></li>
+                <li class="list-group-item p-0 ps-2 border-0"><a href="#">RWS Tridion Docs</a></li>
+                <li class="list-group-item p-0 ps-2 border-0"><a href="#">RWS Language Cloud</a></li>
+                <li class="list-group-item p-0 ps-2 border-0 "><a href="#">RWS Trados Studio</a></li>
               </ul>
-            <li class="nav-item rounded text-white m-2 side-item">ADAM<button class=" btn left-menu__btn">+</button></li>
+            <li class="nav-item rounded text-white m-2 ps-2 pt-2 side-item">ADAM<button class=" btn left-menu__btn">+</button></li>
           </ul>
         </nav>
       </aside>
@@ -60,12 +60,10 @@
             <article class="article my-2 h-100 d-flex flex-column">
               <h2 class="ms-md-5 ms-sm-0">Disneyland Paris</h2>
               <div class="article__row">
-                <div class="article__img--right pe-4"><img src="assets/disneyland/image-disney.jpg" alt="Disneyland Paris"></div>
-                <div class="article__body">
+                <div class="article__img--right pe-4 me-2" ><img src="assets/disneyland/image-disney.jpg" alt="Disneyland Paris"></div>
                   <h3 class="fs-5">Case Study</h3>
-                  <p>The Disneyland Paris, originally The
+                  <p class="fs-6">The Disneyland Paris, originally The
       Euro Disney Resort, is an entertainment resort in Paris, and it is the most visited theme park in the whole France and Europe.</p>
-                </div>
               </div>
               <a href="https://www.disneylandparis.com/en-gb/" class="article__read-more mt-auto">Read more</a>
             </article>
@@ -74,7 +72,7 @@
             <article class="article article--left my-2  h-100 d-flex flex-column">
               <h2 class="ms-md-5 ms-sm-0">Turkish Airlines</h2>
               <div class="article__row">
-                <div class="article__img--left pe-4"><img src="assets/turkish/image-turkish.jpg" alt="Turkish Airlines"></div>
+                <div class="article__img--left pe-4 me-2"><img src="assets/turkish/image-turkish.jpg" alt="Turkish Airlines"></div>
                   <h3 class="fs-5">Case Study</h3>
                   <p class="fs-6">Turkish Airlines is the national airline of Turkey and flies to more than 200
       destinations worldwide. A member of the Star Alliance, Turkish was named by Skytrax as “Best Airline Europe” in 2011 and 2012, and has also won the “Best Premium Economy Seats” for its Comfort Class seats.</p>
