--- a/task4/index.html
+++ b/task4/index.html
@@ -50,28 +50,28 @@
       <section class="content">
         <div class="two-part-row">
           <article class="article article--part-2">
-            <h2>Disneyland Paris</h2>
-            <div class="article__row">
-              <div class="article__img--right"><img src="assets/disneyland/image-disney.jpg" alt="Disneyland Paris"></div>
+            <div>
+              <h2>Disneyland Paris</h2>
               <div class="article__body">
                 <h3>Case Study</h3>
                 <p>The Disneyland Paris, originally The 
     Euro Disney Resort, is an entertainment resort in Paris, and it is the most visited theme park in the whole France and Europe.</p>
               </div>
             </div>
-            <a href="https://www.disneylandparis.com/en-gb/" class="article__read-more">Read more</a>
+            <div class="article__img--right"><img src="assets/disneyland/image-disney.jpg" alt="Disneyland Paris"></div>
+            <div class="article__read-more"><a href="https://www.disneylandparis.com/en-gb/">Read more</a></div>
           </article>
           <article class="article article--part-2 article--left">
-            <h2>Turkish Airlines</h2>
-            <div class="article__row">
-              <div class="article__img--right"><img src="assets/turkish/image-turkish.jpg" alt="Turkish Airlines"></div>
+            <div>
+              <h2>Turkish Airlines</h2>
               <div class="article__body">
                 <h3>Case Study</h3>
                 <p>Turkish Airlines is the national airline of Turkey and flies to more than 200
     destinations worldwide. A member of the Star Alliance, Turkish was named by Skytrax as “Best Airline Europe” in 2011 and 2012, and has also won the “Best Premium Economy Seats” for its Comfort Class seats.</p>
               </div>
             </div>
-            <a href="https://www.disneylandparis.com/en-gb/" class="article__read-more">Read more</a>
+            <div class="article__img--right"><img src="assets/turkish/image-turkish.jpg" alt="Turkish Airlines"></div>
+            <div class="article__read-more"><a href="https://www.disneylandparis.com/en-gb/">Read more</a></div>
           </article>
         </div>
         <div class="three-part-row">
