--- a/task5/index.html
+++ b/task5/index.html
@@ -31,69 +31,81 @@
     </header>
     <main>
       <h1>United we excel</h1>
-      <aside class="side-menu">
-        <nav class="left-menu">
-          <ul>
-            <li class="left-menu__item">Kentico<button class="left-menu__btn">+</button></li>
-            <li class="left-menu__item">Sitecore<button class="left-menu__btn">+</button></li>
-            <li class="left-menu__item item--opened">Tridion<button class="left-menu__btn item--opened">-</button></li>
-              <ul class="left-menu__item--opened">
-                <li><a href="#">RWS Tridion</a></li>
-                <li><a href="#">RWS Tridion Docs</a></li>
-                <li><a href="#">RWS Language Cloud</a></li>
-                <li><a href="#">RWS Trados Studio</a></li>
-              </ul>
-            <li class="left-menu__item">ADAM<button class="left-menu__btn">+</button></li>
-          </ul>
-        </nav>
-      </aside>
-      <section class="content">
-        <div class="content__articles"> 
-          <div class="content__row">
-            <article class="article article--part-2">
-              <h2>Disneyland Paris</h2>
-              <div class="article__row">
-                <div class="article__img--right"><img src="assets/disneyland/image-disney.jpg" alt="Disneyland Paris"></div>
-                <div class="article__body">
-                  <h3>Case Study</h3>
-                  <p>The Disneyland Paris, originally The 
-      Euro Disney Resort, is an entertainment resort in Paris, and it is the most visited theme park in the whole France and Europe.</p>
+      <div class="main-layout">
+        <aside class="side-menu">
+          <nav class="left-menu">
+            <ul>
+              <li class="left-menu__item"><span class="left-menu__label">Kentico</span><button class="left-menu__btn">+</button></li>
+              <li class="left-menu__item"><span class="left-menu__label">Sitecore</span><button class="left-menu__btn">+</button></li>
+              <li class="left-menu__item item--opened"><span class="left-menu__label">Tridion</span><button class="left-menu__btn item--opened">-</button></li>
+                <ul class="left-menu__item--opened">
+                  <li><a href="#">RWS Tridion</a></li>
+                  <li><a href="#">RWS Tridion Docs</a></li>
+                  <li><a href="#">RWS Language Cloud</a></li>
+                  <li><a href="#">RWS Trados Studio</a></li>
+                </ul>
+              <li class="left-menu__item"><span class="left-menu__label">ADAM</span><button class="left-menu__btn">+</button></li>
+            </ul>
+          </nav>
+        </aside>
+        <section class="content">
+          <div class="content__articles"> 
+            <div class="content__row">
+              <article class="article article--part-2">
+                <div class="article__row">
+                  <div class="article__body">
+                    <h2>Disneyland Paris</h2>
+                    <h3>Case Study</h3>
+                    <p>The Disneyland Paris, originally The 
+          Euro Disney Resort, is an entertainment resort in Paris, and it is the most visited theme park in the whole France and Europe.</p>
+                  </div>
+                  <div class="article_links">
+                    <div class="article__img--right"><img src="assets/disneyland/image-disney.jpg" alt="Disneyland Paris"></div>
+                    <a href="https://www.disneylandparis.com/en-gb/" class="article__read-more">Read more</a>
+                  </div>
                 </div>
-              </div>
-              <a href="https://www.disneylandparis.com/en-gb/" class="article__read-more">Read more</a>
-            </article>
-            <article class="article article--part-2 article--left">
-              <h2>Turkish Airlines</h2>
-              <div class="article__row">
-                <div class="article__img--right"><img src="assets/turkish/image-turkish.jpg" alt="Turkish Airlines"></div>
-                <div class="article__body">
-                  <h3>Case Study</h3>
-                  <p>Turkish Airlines is the national airline of Turkey and flies to more than 200
-      destinations worldwide. A member of the Star Alliance, Turkish was named by Skytrax as “Best Airline Europe” in 2011 and 2012, and has also won the “Best Premium Economy Seats” for its Comfort Class seats.</p>
+              </article>
+              <article class="article article--part-2 article--left">
+                <div class="article__row">
+                  <div class="article__body">
+                    <h2>Turkish Airlines</h2>
+                    <h3>Case Study</h3>
+                    <p>Turkish Airlines is the national airline of Turkey and flies to more than 200
+        destinations worldwide. A member of the Star Alliance, Turkish was named by Skytrax as “Best Airline Europe” in 2011 and 2012, and has also won the “Best Premium Economy Seats” for its Comfort Class seats.</p>
+                  </div>
+                  <div class="article_links">
+                    <div class="article__img--right"><img src="assets/turkish/image-turkish.jpg" alt="Turkish Airlines"></div>
+                    <a href="https://www.disneylandparis.com/en-gb/" class="article__read-more">Read more</a>
+                  </div>
                 </div>
-              </div>
-              <a href="https://www.disneylandparis.com/en-gb/" class="article__read-more">Read more</a>
-            </article>
+              </article>
+            </div>
+            <div class="content__row">
+              <article class="article article--part-3">
+                <div class="card-content">
+                  <h2 class="article__title">ACI Universal Payments</h2>
+                  <div class="article__img--wide"><img src="assets/aci/image-aci.jpg" alt="ACI Universal Payments"></div>
+                  <p>ACI Worldwide — the leader in real-time payments — delivers the mission-critical real-time payments software solutions that enable corporations to process and manage digital payments, power omni-commerce payments, present and process bill payments, and manage fraud and risk. </p>
+                </div>
+              </article>
+              <article class="article article--part-3 article--text">
+                <div class="card-content">
+                  <h2 class="article__title">AEG</h2>
+                  <div class="article__img--wide"><img src="assets/aeg/image-aeg.jpg" alt="ACI Universal Payments"></div>
+                  <p class="article__text">AEG Presents is one of the largest live music companies in the world. The company is dedicated to all aspects of live contemporary music performances, including producing and promoting global and regional concert tours, music events and world-renowned festivals.  </p>
+                </div>
+              </article>
+              <article class="article article--part-3" >
+                <div class="card-content">
+                  <h2 class="article__title">IVC Evidensia</h2>
+                  <div class="article__img--wide"><img src="assets/evidensia/image-evidensia.jpg" alt="ACI Universal Payments"></div>
+                  <p>IVC Evidensia is the leading global veterinary care provider comprising an expansive network of clinics, hospitals and out-of-hour centres based across 19 countries. We invest in our people, premises and processes to provide clinical excellence.   </p>
+                </div>
+              </article>
+            </div>
           </div>
-          <div class="content__row">
-            <article class="article article--part-3">
-              <h2 class="article__title">ACI Universal Payments</h2>
-              <div class="article__img--wide"><img src="assets/aci/image-aci.jpg" alt="ACI Universal Payments"></div>
-              <p>ACI Worldwide — the leader in real-time payments — delivers the mission-critical real-time payments software solutions that enable corporations to process and manage digital payments, power omni-commerce payments, present and process bill payments, and manage fraud and risk. </p>
-            </article>
-            <article class="article article--part-3 article--text">
-              <h2 class="article__title">AEG</h2>
-              <div class="article__img--stacked"><img src="assets/aeg/image-aeg.jpg" alt="ACI Universal Payments"></div>
-              <p class="article__text">AEG Presents is one of the largest live music companies in the world. The company is dedicated to all aspects of live contemporary music performances, including producing and promoting global and regional concert tours, music events and world-renowned festivals.  </p>
-            </article>
-            <article class="article article--part-3" >
-              <h2 class="article__title">IVC Evidensia</h2>
-              <div class="article__img--wide"><img src="assets/evidensia/image-evidensia.jpg" alt="ACI Universal Payments"></div>
-              <p>IVC Evidensia is the leading global veterinary care provider comprising an expansive network of clinics, hospitals and out-of-hour centres based across 19 countries. We invest in our people, premises and processes to provide clinical excellence.   </p>
-            </article>
-          </div>
-        </div>
-      </section>
+        </section>
+      </div>
     </main>
     <footer>
       <div class="footer">
