--- a/task6/index.html
+++ b/task6/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0 shrink-to-fit=no">
     <title>EXLRT</title>
     <link rel="stylesheet" href="style/index.css">
+    <script src="js/script.js" async></script>
   </head>
   <body>
     <header>
@@ -105,6 +106,8 @@
           </div>
         </section>
       </div>
+      <div id="movies"></div>
+      <button onclick="changeColor()"> Change Background</button>
     </main>
     <footer>
       <div class="footer">
